feat(#64): 部署重构实施——docker 模块退役 + jina 配置化 + compose 部署 + 源类型三型收敛
- 删除 docker 顶级模块（10 类）与 containermcp（ContainerMcp/ContainerMcpClient/Markitdown*）+ 相关测试；删除 sidecars/markitdown、manifests 与根 pom 的 mcp.* 属性/antrun 生成
- jina 改为 native 源（ADR-0016）：JinaReader 端点配置化（jina.url）、JinaRestClient 新增 multipart 上传（file:// 宿主文件）、JinaTools 迁 nativemcp.network.jina
- SourceType 删 CONTAINER 收敛 native/proxy；McpEndpointProvider 去 getProtocol；McpSourceRegistry/CatalogEndpoint 去 protocol 字段
- 新增 compose.yml（jina 引擎，127.0.0.1:18081 + healthcheck + restart + 隔离网络）；README/测试指南同步
- 全量测试 ./mvnw test -Dvaadin.skip=true 通过（222 tests, 0 failures）

Co-Authored-By: Claude <noreply@anthropic.com>